--- a/checkpoint.html
+++ b/checkpoint.html
@@ -35,6 +35,7 @@
         };
 
        fetch("https://script.google.com/macros/s/AKfycbw9zcxKNxET0IQWyBwsnDFgFbBvvNkLdImPfGL9zAPFCvx2stWQRR7FFFmXczZGBYw77g/exec", {
+          mode: "no-cors", 
           method: "POST",
           body: JSON.stringify(data),
           headers: {
