--- a/checkpoint.html
+++ b/checkpoint.html
@@ -3,6 +3,14 @@
 <head>
   <title>Checkpoint Satpam</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    video, canvas {
+      width: 100%;
+      max-width: 300px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
   <h2>Absen Checkpoint Satpam</h2>
@@ -13,43 +21,72 @@
     <label>ID Checkpoint:</label><br>
     <input type="text" name="checkpoint_id" id="checkpoint_id" readonly><br><br>
 
-    <button type="button" onclick="sendData()">Submit</button>
+    <video id="video" autoplay playsinline></video>
+    <canvas id="canvas" style="display: none;"></canvas>
+    <button type="button" onclick="capturePhoto()">📸 Ambil Selfie</button><br><br>
+
+    <button type="button" onclick="sendData()">📤 Submit</button>
     <p id="status"></p>
   </form>
 
   <script>
-    // Ambil checkpoint_id dari URL dan isi otomatis
     const urlParams = new URLSearchParams(window.location.search);
     const checkpointId = urlParams.get("checkpoint_id");
     if (checkpointId) {
       document.getElementById("checkpoint_id").value = checkpointId;
     }
 
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    let photoData = "";
+
+    // Akses kamera depan
+    navigator.mediaDevices.getUserMedia({
+      video: { facingMode: "user" }
+    }).then(stream => {
+      video.srcObject = stream;
+    });
+
+    function capturePhoto() {
+      const context = canvas.getContext('2d');
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      context.drawImage(video, 0, 0, canvas.width, canvas.height);
+      photoData = canvas.toDataURL('image/jpeg');
+      document.getElementById("status").textContent = "✅ Selfie diambil.";
+    }
+
     function sendData() {
+      if (!photoData) {
+        alert("Ambil selfie dulu!");
+        return;
+      }
+
       navigator.geolocation.getCurrentPosition(function(position) {
         const data = {
           satpam_id: document.querySelector('[name="satpam_id"]').value,
           checkpoint_id: document.querySelector('[name="checkpoint_id"]').value,
           latitude: position.coords.latitude,
-          longitude: position.coords.longitude
+          longitude: position.coords.longitude,
+          photo: photoData
         };
 
-        fetch("https://script.google.com/macros/s/AKfycbw9zcxKNxET0IQWyBwsnDFgFbBvvNkLdImPfGL9zAPFCvx2stWQRR7FFFmXczZGBYw77g/exec", {
+        fetch("https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec", {
           method: "POST",
-            mode: "no-cors",
+          mode: "no-cors",
           headers: {
             "Content-Type": "application/json"
           },
           body: JSON.stringify(data)
         })
-        .then(res => {
+        .then(() => {
           document.getElementById("status").textContent = "Terkirim ✅";
         })
         .catch(err => {
           document.getElementById("status").textContent = "Gagal: " + err.message;
         });
       }, function(error) {
-        document.getElementById("status").textContent = "GPS tidak tersedia ❌";
+        document.getElementById("status").textContent = "❌ GPS gagal: " + error.message;
       });
     }
   </script>
